cierra #28 cambiando a task como gestor de tareas

--- a/iv.yaml
+++ b/iv.yaml
@@ -1,5 +1,5 @@
 lenguaje: Go
 entidad: pkg/ConjuntoAnalisis.go
 automatizar:
-  fichero: Makefile
-  orden: make
+  fichero: Taskfile.yaml
+  orden: task
